# parallel-quick-sort

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  opencilk.cmake
include/: .gitignore  par.h  seq.h  sort.h
src/: compare.c  par.c  seq.c
tests/: CMakeLists.txt
tests/src/: test_par.c  test_seq.c
